# pagi-core-lib

./: Cargo.toml  README.md
pagi_knowledge_base/: db  snap.0000000000005022
src/: facts.rs  lib.rs
