[package]
name = "pagi-core-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "pagi_core_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
interprocess = "1.0"
sled = "0.34"
tracing = { version = "0.1", features = ["attributes"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
